# SmallCC

./: AST.cpp  AST.cpp~  AST.h  AST.h~  CMakeLists.txt  ConstHeader.h  ConstHeader.h~  Generator (copy).h  Generator.cpp  Generator.cpp~  Generator.h  Generator.h~  README  SmallCC.cbp  SmallCC.depend  SmallCC.layout  csort.c~  data.s  data.s~  error  error~  lexer.cpp  lexer.l  lexer.l~  main.cpp  main.cpp~  makefile  makefile~  parser (copy).y  parser.cpp  parser.hpp  parser.y  parser.y~  scc  semanticAnalyzer.cpp  semanticAnalyzer.cpp~  semanticAnalyzer.h  semanticAnalyzer.h~  test  test~  (+1 more)
test case/: a+b.c  csort.c  csort.c~  factor.c  gcd.c  password.c  qsort.c
